--- a/tinkar-core/provider/entity-provider/pom.xml
+++ b/tinkar-core/provider/entity-provider/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>auto-service</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
