--- a/jpms-deps/pom.xml
+++ b/jpms-deps/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.hl7.tinkar</groupId>
     <artifactId>tinkar-jpms-deps</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <name>TINKAR JPMS Deps: (MMP)</name>
     <properties>
