--- a/tinkar-core/dto/pom.xml
+++ b/tinkar-core/dto/pom.xml
@@ -21,11 +21,6 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.hl7.tinkar</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
             <groupId>io.activej</groupId>
             <artifactId>activej-inject</artifactId>
             <version>${activej.version}</version>
@@ -33,7 +28,7 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>record-builder-core</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
