--- a/tinkar-core/entity/pom.xml
+++ b/tinkar-core/entity/pom.xml
@@ -29,18 +29,13 @@
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hl7.tinkar</groupId>
             <artifactId>caffeine</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>auto-service</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
