--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -27,6 +27,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <record-builder-core.version>1.19</record-builder-core.version>
         <roaringbitmap.version>0.9.8</roaringbitmap.version>
+        <tinkar-jpms-deps.version>1.0</tinkar-jpms-deps.version>
         <testng.version>7.4.0</testng.version>
     </properties>
     <dependencyManagement>
@@ -43,7 +44,7 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>auto-service</artifactId>
-            <version>${project.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
