--- a/tinkar-core/provider/data-ephemeral-provider/pom.xml
+++ b/tinkar-core/provider/data-ephemeral-provider/pom.xml
@@ -29,14 +29,8 @@
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>component</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hl7.tinkar</groupId>
-            <artifactId>test-util</artifactId>
-            <version>${project.parent.version}</version>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
