--- a/tinkar-core/integration/pom.xml
+++ b/tinkar-core/integration/pom.xml
@@ -64,7 +64,7 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-<!--                            <skipTests>true</skipTests>-->
+                            <skipTests>false</skipTests>
                             <trimStackTrace>false</trimStackTrace>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/ephemeral-testng.xml</suiteXmlFile>
@@ -78,7 +78,7 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-<!--                            <skipTests>true</skipTests>-->
+                            <skipTests>false</skipTests>
                             <trimStackTrace>false</trimStackTrace>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/spinedstore-testng.xml</suiteXmlFile>
@@ -92,6 +92,7 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
+                            <skipTests>false</skipTests>
                             <trimStackTrace>false</trimStackTrace>
                             <suiteXmlFiles>
                                 <suiteXmlFile>src/test/resources/mvstore-testng.xml</suiteXmlFile>
