--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -13,6 +13,7 @@
         <auto-service.version>1.0-rc7</auto-service.version>
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <eclipse-collections-api.version>11.0.0.M1</eclipse-collections-api.version>
+        <io.smallrye.reactive.version>0.17.0</io.smallrye.reactive.version>
         <jgrapht.version>1.5.0</jgrapht.version>
         <junit.version>5.6.3</junit.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
@@ -27,8 +28,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <record-builder-core.version>1.19</record-builder-core.version>
         <roaringbitmap.version>0.9.8</roaringbitmap.version>
-        <tinkar-jpms-deps.version>1.0.1</tinkar-jpms-deps.version>
         <testng.version>7.4.0</testng.version>
+        <tinkar-jpms-deps.version>1.0.1</tinkar-jpms-deps.version>
     </properties>
     <dependencyManagement>
         <dependencies>
