--- a/jpms-deps/pom.xml
+++ b/jpms-deps/pom.xml
@@ -15,6 +15,7 @@
         <caffeine.version>3.0.2</caffeine.version>
         <eclipse-collections-api.version>11.0.0.M1</eclipse-collections-api.version>
         <h2-mvstore.version>1.4.200</h2-mvstore.version>
+        <lucene.version>8.9.0</lucene.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
@@ -98,6 +99,7 @@
         <module>caffeine</module>
         <module>chronicle-map</module>
         <module>eclipse-collections</module>
+        <module>lucene</module>
         <module>mvstore</module>
         <module>record-builder-core</module>
         <module>roaring</module>
