--- a/tinkar-core/provider/data-ephemeral-provider/pom.xml
+++ b/tinkar-core/provider/data-ephemeral-provider/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <build>
         <plugins>
 
-         </plugins>
+        </plugins>
     </build>
     <parent>
         <artifactId>provider</artifactId>
@@ -24,6 +25,11 @@
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
+            <artifactId>search-provider</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
             <artifactId>collection</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
@@ -37,5 +43,11 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
+            <artifactId>search-provider</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
- </project>
+</project>
