--- a/tinkar-core/provider/data-spinedarray-provider/pom.xml
+++ b/tinkar-core/provider/data-spinedarray-provider/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -13,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>entity</artifactId>
+            <artifactId>search-provider</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
@@ -48,10 +49,10 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <!-- <argLine>-Dchronicle.values.dumpCode=true ... -->
-<!--                    <argLine>&#45;&#45;illegal-access=permit &#45;&#45;add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>-->
+                    <!--                    <argLine>&#45;&#45;illegal-access=permit &#45;&#45;add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>-->
                     <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
     </build>
- </project>
+</project>
