--- a/tinkar-core/provider/entity-provider/pom.xml
+++ b/tinkar-core/provider/entity-provider/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <build>
         <plugins>
@@ -18,6 +19,11 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>entity</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
+            <artifactId>search-provider</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
@@ -43,4 +49,4 @@
             <version>0.17.0</version>
         </dependency>
     </dependencies>
- </project>
+</project>
