--- a/tinkar-core/integration/pom.xml
+++ b/tinkar-core/integration/pom.xml
@@ -83,6 +83,14 @@
                             <overWrite>false</overWrite>
                             <outputDirectory>${project.build.directory}/data</outputDirectory>
                         </artifactItem>
+                        <!--                        <artifactItem>-->
+                        <!--                            <groupId>org.hl7.tinkar</groupId>-->
+                        <!--                            <artifactId>tinkar-solor-us-export.pb</artifactId>-->
+                        <!--                            <version>1.0.0.0</version>-->
+                        <!--                            <type>zip</type>-->
+                        <!--                            <overWrite>false</overWrite>-->
+                        <!--                            <outputDirectory>${project.build.directory}/data</outputDirectory>-->
+                        <!--                        </artifactItem>-->
                     </artifactItems>
                     <outputDirectory>${project.build.directory}/data</outputDirectory>
                     <overWriteReleases>false</overWriteReleases>
