Commit and cancel transactions and parts of transactions.

--- a/tinkar-core/integration/pom.xml
+++ b/tinkar-core/integration/pom.xml
@@ -122,6 +122,7 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
+                            <trimStackTrace>false</trimStackTrace>
                             <includes>**/Test*.java</includes>
                         </configuration>
                     </execution>
