Added missing JPMS export to eclipse collections. toString() methods for IntIdCollections.

--- a/jpms-deps/eclipse-collections/pom.xml
+++ b/jpms-deps/eclipse-collections/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tinkar-jpms-deps</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.2</version>
+        <version>1.0.3</version>
     </parent>
     <artifactId>eclipse-collections</artifactId>
     <packaging>jar</packaging>
@@ -37,6 +37,7 @@
                                         exports org.eclipse.collections.api;
                                         exports org.eclipse.collections.api.bag;
                                         exports org.eclipse.collections.api.bag.sorted;
+                                        exports org.eclipse.collections.api.block.comparator.primitive;
                                         exports org.eclipse.collections.api.block.function;
                                         exports org.eclipse.collections.api.block.function.primitive;
                                         exports org.eclipse.collections.api.block.predicate;
@@ -186,6 +187,7 @@
                                         exports org.eclipse.collections.api;
                                         exports org.eclipse.collections.api.bag;
                                         exports org.eclipse.collections.api.bag.sorted;
+                                        exports org.eclipse.collections.api.block.comparator.primitive;
                                         exports org.eclipse.collections.api.block.function;
                                         exports org.eclipse.collections.api.block.function.primitive;
                                         exports org.eclipse.collections.api.block.predicate;
