--- a/jpms-deps/pom.xml
+++ b/jpms-deps/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.hl7.tinkar</groupId>
     <artifactId>tinkar-jpms-deps</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.7</version>
     <packaging>pom</packaging>
     <name>TINKAR JPMS Deps: (MMP)</name>
     <properties>
@@ -15,6 +15,7 @@
         <caffeine.version>3.0.5</caffeine.version>
         <eclipse-collections-api.version>11.0.0.M1</eclipse-collections-api.version>
         <h2-mvstore.version>1.4.200</h2-mvstore.version>
+        <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
         <lucene.version>8.9.0</lucene.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -24,6 +25,7 @@
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
+        <org.reactivestreams.version>1.0.3</org.reactivestreams.version>
         <record-builder-core.version>1.19</record-builder-core.version>
         <roaringbitmap.version>0.9.10</roaringbitmap.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -103,5 +105,7 @@
         <module>mvstore</module>
         <module>record-builder-core</module>
         <module>roaring</module>
+        <module>snorocket</module>
+        <module>mutiny</module>
     </modules>
 </project>
