--- a/tinkar-core/common/pom.xml
+++ b/tinkar-core/common/pom.xml
@@ -22,9 +22,9 @@
             <version>${tinkar-jpms-deps.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.smallrye.reactive</groupId>
+            <groupId>org.hl7.tinkar</groupId>
             <artifactId>mutiny</artifactId>
-            <version>${io.smallrye.reactive.version}</version>
+            <version>${tinkar-jpms-deps.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
