--- a/jpms-deps/lucene/pom.xml
+++ b/jpms-deps/lucene/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tinkar-jpms-deps</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.7</version>
+        <version>1.0.8</version>
     </parent>
     <artifactId>lucene</artifactId>
     <packaging>jar</packaging>
@@ -21,6 +21,11 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-highlighter</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-memory</artifactId>
             <version>${lucene.version}</version>
         </dependency>
     </dependencies>
@@ -48,6 +53,12 @@
                                 <artifactItem>
                                     <groupId>org.apache.lucene</groupId>
                                     <artifactId>lucene-highlighter</artifactId>
+                                    <version>${lucene.version}</version>
+                                    <type>jar</type>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.apache.lucene</groupId>
+                                    <artifactId>lucene-memory</artifactId>
                                     <version>${lucene.version}</version>
                                     <type>jar</type>
                                 </artifactItem>
@@ -116,6 +127,7 @@
                                       overwrite="false">
                                     <fileset dir="${project.build.directory}/deps" includes="**/*" />
                                 </copy>
+                                <delete dir="${project.build.directory}/classes/META-INF/versions" />
                             </target>
                         </configuration>
                         <goals>
