--- a/tinkar-core/entity/pom.xml
+++ b/tinkar-core/entity/pom.xml
@@ -46,10 +46,10 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.hl7.tinkar</groupId>-->
-        <!--            <artifactId>protobuf</artifactId>-->
-        <!--            <version>1.2.2</version>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
+            <artifactId>protobuf</artifactId>
+            <version>${tinkar.protobuf.version}</version>
+        </dependency>
     </dependencies>
 </project>
