--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -32,6 +32,7 @@
         <slf4j.version>2.0.0-alpha6</slf4j.version>
         <testng.version>7.4.0</testng.version>
         <tinkar-jpms-deps.version>1.0.8</tinkar-jpms-deps.version>
+        <tinkar.protobuf.version>1.4.1</tinkar.protobuf.version>
     </properties>
     <dependencyManagement>
         <dependencies>
