--- a/tinkar-core/entity/pom.xml
+++ b/tinkar-core/entity/pom.xml
@@ -25,6 +25,16 @@
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
+            <artifactId>component</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
             <artifactId>caffeine</artifactId>
             <version>${tinkar-jpms-deps.version}</version>
         </dependency>
