--- a/jpms-deps/eclipse-collections/pom.xml
+++ b/jpms-deps/eclipse-collections/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tinkar-jpms-deps</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.8</version>
+        <version>1.0.11</version>
     </parent>
     <artifactId>eclipse-collections</artifactId>
     <packaging>jar</packaging>
@@ -54,6 +54,7 @@
                                         exports org.eclipse.collections.api.factory.list;
                                         exports org.eclipse.collections.api.factory.list.primitive;
                                         exports org.eclipse.collections.api.factory.set;
+                                        exports org.eclipse.collections.api.factory.set.sorted;
                                         exports org.eclipse.collections.api.factory.set.primitive;
                                         exports org.eclipse.collections.api.factory.map;
                                         exports org.eclipse.collections.api.factory.map.primitive;
@@ -206,6 +207,7 @@
                                         exports org.eclipse.collections.api.factory.list;
                                         exports org.eclipse.collections.api.factory.list.primitive;
                                         exports org.eclipse.collections.api.factory.set;
+                                        exports org.eclipse.collections.api.factory.set.sorted;
                                         exports org.eclipse.collections.api.factory.set.primitive;
                                         exports org.eclipse.collections.api.factory.map;
                                         exports org.eclipse.collections.api.factory.map.primitive;
