--- a/jpms-deps/pom.xml
+++ b/jpms-deps/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.hl7.tinkar</groupId>
     <artifactId>tinkar-jpms-deps</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.11</version>
     <packaging>pom</packaging>
     <name>TINKAR JPMS Deps: (MMP)</name>
     <properties>
@@ -13,9 +13,10 @@
         <activej.version>4.3</activej.version>
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <caffeine.version>3.0.5</caffeine.version>
-        <eclipse-collections-api.version>11.0.0.M1</eclipse-collections-api.version>
+        <eclipse-collections-api.version>11.0.0</eclipse-collections-api.version>
         <h2-mvstore.version>1.4.200</h2-mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
+        <jheaps.version>0.14</jheaps.version>
         <lucene.version>8.9.0</lucene.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -26,7 +27,7 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
         <org.reactivestreams.version>1.0.3</org.reactivestreams.version>
-        <record-builder-core.version>1.19</record-builder-core.version>
+        <record-builder-core.version>33</record-builder-core.version>
         <roaringbitmap.version>0.9.10</roaringbitmap.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -101,6 +102,7 @@
         <module>caffeine</module>
         <module>chronicle-map</module>
         <module>eclipse-collections</module>
+        <module>jheaps</module>
         <module>lucene</module>
         <module>mvstore</module>
         <module>record-builder-core</module>
